--- a/slaves/config/config1.json
+++ b/slaves/config/config1.json
@@ -2,6 +2,6 @@
     "host": "127.0.0.1", 
     "port": 4001,
     "server_name":"slave2",
-    "subscriber_name":"",
-    "dbConnConfig":{"user":"postgres", "pass":"teodiomysql", "host":"127.0.0.1", "port":"5432", "dbname":"db2"}
+    "db_name": "db2",
+    "dbConnConfig":{"user":"postgres", "pass":"teodiomysql", "host":"127.0.0.1", "port":"5432", "dbname":"doc_db"}
 }
