--- a/slaves/config/config2.json
+++ b/slaves/config/config2.json
@@ -2,6 +2,6 @@
     "host": "127.0.0.1", 
     "port": 4002,
     "server_name":"slave3",
-    "subscriber_name":"",
-    "dbConnConfig":{"user":"postgres", "pass":"teodiomysql", "host":"127.0.0.1", "port":"5432", "dbname":"db3"}
+    "db_name": "db3",
+    "dbConnConfig":{"user":"postgres", "pass":"teodiomysql", "host":"127.0.0.1", "port":"5432", "dbname":"doc_db"}
 }
