--- a/slaves/docker-compose.yml
+++ b/slaves/docker-compose.yml
@@ -5,12 +5,13 @@ services:
     container_name: doc_db 
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=teodiomysql
-      - POSTGRES_DB=doc_db
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
-      - '127.0.0.1:5432:5432'
+      - '${POSTGRES_HOST}:${POSTGRES_PORT}:${POSTGRES_PORT}'
     volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - postgres_db:/var/lib/postgresql/data
 volumes:
   postgres_db:
